--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <h1>Irsan Kinyua</h1>
                 <div class="title-divider"></div>
                 <p class="subtitle">Monteur audiovisuel</p>
-                <p class="description">"Voici certains projets que j'ai pu réaliser. J'ai composé ces beats et monté les vidéos qui les accompagnent"</p>
+                <p class="description">"Voici certains projets que j'ai pu réaliser. "J'ai composé ces beats, monté les vidéos qui les accompagnent, et codé le web ahah"</p>
             </div>
         </header>
 
